force-app/main/default/objects/PO__c/PO__c.object-meta.xml
<CustomObject>
    <label>PO</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>PO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>