force-app/main/default/objects/PO__c/fields/Category_of_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Delivery_Address__c</fullName>
    <label>Category of Delivery Address</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
                <default>true</default>
                <label>Store</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>