force-app/main/default/objects/PO__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PO</relationshipLabel>
    <relationshipName>PO</relationshipName>
    <type>Lookup</type>
</CustomField>