force-app/main/default/objects/PO__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>PO</relationshipLabel>
    <relationshipName>PO</relationshipName>
    <type>Lookup</type>
</CustomField>