force-app/main/default/objects/PO__c/fields/Sample_Display__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display__c</fullName>
    <label>Sample Display</label>
    <referenceTo>Sample_Display__c</referenceTo>
    <relationshipLabel>PO</relationshipLabel>
    <relationshipName>PO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>