force-app/main/default/objects/PO__c/fields/Sample_Display_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display_Approval_Status__c</fullName>
    <formula>TEXT( Sample_Display__r.Approval_Status__c )</formula>
    <label>Sample Display Approval Status</label>
    <type>Text</type>
</CustomField>